@@ -5,6 +5,7 @@ Date: ????
     - Begin building the combinator logic (in a seperate file)
     - Start walking to the front of the belt
     - Prevent an infinite loop
+    - Use the unit number as the seen key (will help with cross-surface)
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 2024. 11. 12
